Adds create dir test, fixes directories table and repositories